LOUPE_Backend/SynchronizationService.API/Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: k3d-fontys:5000/api:v0.1
        ports:
        - containerPort: 5021
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
